# fin-parser

./: .coverage  .gitignore  README.md  notes  pyproject.toml  requirements.txt  t
data/: .fuse_hidden0000000b00000002  .fuse_hidden0000000b00000003  .fuse_hidden0000000d00000001
fin_parser/: cli.py  cli.py.old  config.py  db.py  t
fin_parser/analysis/: red_flags.py
fin_parser/dashboard/: app.py
fin_parser/extraction/: claude_extractor.py  mining_extractor.py
fin_parser/ingestion/: edgar.py  edgar.py.old  edgar.py.old2  repository.py  sedar_plus.py
fin_parser/valuation/: engine.py
tests/: test_edgar.py
